content wrapping fix

--- a/src/layout/Footer/Footer.scss
+++ b/src/layout/Footer/Footer.scss
@@ -4,7 +4,7 @@ footer {
   justify-content: space-between;
   font-size: 20px;
   border-top: 1px solid black;
-  padding: 0 56px;
+  padding: 0 32px;
 }
 
 .project_github {
