--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -3,7 +3,6 @@ header {
   align-items: center;
   justify-content: center;
   border-bottom: 1px solid black;
-  padding: 0 56px;
 }
 
 .heading {
